<resources>
    <string name="app_name">ResturantFastFood_Admin</string>
    <string name="txt_product_name">Nombre del producto</string>
    <string name="txt_product_price">Precio del producto</string>
    <string name="txt_product_type">Tipo</string>
    <string name="txt_product_description">Descripcion</string>
    <string name="txt_product_picture">Url imagen</string>
    <string name="bt_add_product">Agregar Producto</string>
    <string name="txt_add_product">txt_add_product</string>
    <string name="txt_agregar_producto">Crear Producto</string>
    <string name="descripcion">Descripción</string>
    <string name="home">Mis Productos</string>
    <string name="orders">orders</string>
    <string name="history">Historial</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>